<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="90dp"
        android:layout_height="90dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/black">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/searchButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/search_view_bg"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="10dp"
            android:drawableStart="@drawable/baseline_search_24"
            android:text="@string/search_question"
            android:textColor="@color/white"
            android:drawableTint="@color/white"
            android:clickable="true"
            android:focusable="true">
        </androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/radiosContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/searchButton"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tvTopRadios"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                android:textSize="22sp"
                android:textColor="@color/white"
                android:text="@string/radio_explorer"
                android:fontFamily="@font/tektur_bold"
                android:layout_marginTop="20dp"
                android:textAlignment="center"
                android:layout_marginStart="20dp">
            </TextView>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvRadios"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <TextView
            android:id="@+id/tvGenreExplorer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/radiosContainer"
            android:textSize="22sp"
            android:textColor="@color/white"
            android:text="@string/genre_explorer"
            android:fontFamily="@font/tektur_bold"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:layout_marginStart="20dp" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvGenres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvGenreExplorer"
            app:layout_constraintBottom_toTopOf="@id/spacer"
            android:nestedScrollingEnabled="false"
            android:layout_marginBottom="60dp"/>
        <View
            android:id="@+id/spacer"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="gone"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
   </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
