<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

 <ProgressBar
     android:id="@+id/progressBar"
     android:layout_width="90dp"
     android:layout_height="90dp"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintBottom_toBottomOf="parent"/>

 <androidx.core.widget.NestedScrollView
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/topPlaylistContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/topArtistsContainer"
            android:orientation="vertical"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/tvTopPlaylistContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:text="@string/top_Playlists"
                android:fontFamily="@font/tektur_bold"
                android:textColor="@color/white"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="15dp"
                android:textAlignment="center"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvTopPlaylistContainer"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="center_horizontal"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/topArtistsContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/topPlaylistContainer"
            app:layout_constraintBottom_toTopOf="@id/topAlbumsContainer"
            android:orientation="vertical"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/tvTopArtists"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:text="@string/top_artists"
                android:textColor="@color/white"
                android:fontFamily="@font/tektur_bold"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginBottom="5dp"
                android:textAlignment="center"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvTopArtistsContainer"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="center_horizontal"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/topAlbumsContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/topArtistsContainer"
            android:orientation="vertical"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/tvTopAlbumsContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textColor="@color/white"
                android:text="@string/top_albums"
                android:fontFamily="@font/tektur_bold"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginBottom="5dp"
                android:textAlignment="center"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvTopAlbumsContainer"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="center_horizontal"/>

        </androidx.appcompat.widget.LinearLayoutCompat>


        <TextView
            android:id="@+id/tvTracksContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/topAlbumsContainer"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:text="@string/top_tracks"
            android:fontFamily="@font/tektur_bold"
            android:layout_marginHorizontal="50dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:textAlignment="center"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvTopTracksContainer"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTracksContainer"
                app:layout_constraintBottom_toTopOf="@id/spacer"
                android:overScrollMode="never"
                android:layout_marginBottom="60dp">
            </androidx.recyclerview.widget.RecyclerView>
        <View
            android:id="@+id/spacer"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="gone"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
   </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>