<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/searchContainer"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal"
        android:background="@drawable/gradient_bg">
        <ImageView
            android:id="@+id/popBack"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:src="@drawable/baseline_arrow_back_24"
            android:padding="10dp"
            android:layout_marginStart="5dp">
        </ImageView>
        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            app:queryHint="what do you search?"
            app:iconifiedByDefault="false"
            app:searchIcon="@null"
            app:queryBackground="@color/transparent_white">
        </androidx.appcompat.widget.SearchView>
    </androidx.appcompat.widget.Toolbar>
    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/spacer"
        app:layout_constraintTop_toBottomOf="@id/searchContainer">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/latestSearchesContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/no_cache"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/noSearches"
                android:layout_gravity="center"
                android:layout_marginTop="250dp"
                android:textSize="20sp"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">
            </TextView>
            <TextView
                android:id="@+id/searchesText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/currentSearches"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">
            </TextView>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvLatestSearches"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/searchesText"
                app:layout_constraintBottom_toTopOf="@id/deleteAllSearches"
                android:nestedScrollingEnabled="false">
            </androidx.recyclerview.widget.RecyclerView>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/deleteAllSearches"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/border_color"
                android:text="@string/deleteAllSearches"
                android:textSize="12sp"
                android:layout_gravity="center_horizontal"
                android:padding="6dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rvLatestSearches"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="60dp"
                app:layout_constraintBottom_toBottomOf="parent">
            </androidx.appcompat.widget.AppCompatButton>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvSearchResults"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/searchContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="60dp">
    </androidx.recyclerview.widget.RecyclerView>
    <View
        android:id="@+id/spacer"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
